collMods occurring as part of setFCV may lose some collections in sharded clusters

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc5
    • Affects Version/s: 7.3.3, 8.0.0-rc5
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-05-13
    • 6
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      As part of SERVER-72229 we made setFCV implement an "upgrade" step that scrubbed encryption options from all local WT collections. This was further reinforced by SERVER-79496 to ban using the options on new nodes but had to be wrapped in a feature flag as part of SERVER-82203.

      However, this was done without taking into consideration concurrent DDL operations. As such the collection could be created with encryption options during FCV upgrade by a DDL coordinator and missed by the FCV upgrade step. That is, the set of collections we scrub the option from might not be complete.

      This also conflicts with sharding DDL operations since the collMod occurs locally without taking any sharding DDL locks.

            Assignee:
            Aitor Esteve Alvarado
            Reporter:
            Jordi Olivares Provencio
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: