SERVER-90094 Revert FCV upgrade step to remove ephemeral ESE WiredTiger config string attributes (#21884)

GitOrigin-RevId: a5bc4c8fa3ba4793a586400061cc6afb2b23e278