src/mongo/db/catalog/collection.h
@@ -616,12 +616,6 @@ public:
     virtual bool isMetadataEqual(const BSONObj& otherMetadata) const = 0;
 
     /**
-     * Sanitizes the collection options in order to remove parameters that are local to this mongod
-     * instance.
-     */
-    virtual void sanitizeCollectionOptions(OperationContext* opCtx) = 0;
-
-    /**
      * Specifies whether writes to this collection should X-lock the metadata resource. It is only
      * set for replicated, non-clustered capped collections. Such collections require writes to be
      * serialized on the secondary in order to guarantee insertion order (SERVER-21483). This
