src/mongo/db/catalog/collection_impl.h
@@ -408,8 +408,6 @@ public:
 
     bool isMetadataEqual(const BSONObj& otherMetadata) const final;
 
-    void sanitizeCollectionOptions(OperationContext* opCtx) final;
-
     bool needsCappedLock() const final;
 
     bool isCappedAndNeedsDelete(OperationContext* opCtx) const final;
